@@ -1,7 +1,7 @@
 {
-  "timestamp" : "2022-04-03T08:08:53Z",
-  "count" : 1,
-  "count_minmax" : [ 0, 1 ],
+  "timestamp" : "2022-04-04T00:33:31Z",
+  "count" : 9,
+  "count_minmax" : [ 0, 9 ],
   "count_prev_day_inc" : 13,
   "count_prev_day_dec" : 0,
   "uniques" : 1,
