@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-04-03T08:08:53Z",
-  "count_outdated" : 546,
-  "uniques_outdated" : 35,
-  "count" : 899,
+  "timestamp" : "2022-04-04T00:33:31Z",
+  "count_outdated" : 547,
+  "uniques_outdated" : 36,
+  "count" : 907,
   "uniques" : 49,
   "views" : [
-    {
-      "timestamp": "2022-03-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-03-23T00:00:00Z",
       "count": 43,
@@ -91,8 +84,8 @@
     },
     {
       "timestamp": "2022-04-03T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 0, 1 ],
+      "count": 9,
+      "count_minmax": [ 0, 9 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
     }
