@@ -1,12 +1,7 @@
 {
-  "count": 353,
+  "count": 360,
   "uniques": 2,
   "views": [
-    {
-      "timestamp": "2022-03-21T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-03-23T00:00:00Z",
       "count": 43,
@@ -64,7 +59,7 @@
     },
     {
       "timestamp": "2022-04-03T00:00:00Z",
-      "count": 1,
+      "count": 9,
       "uniques": 1
     }
   ]
